--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,9 +24,22 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
+
       - name: Install Playwright Browsers
         run: |
           npx playwright install --with-deps
+
       - name: Run Playwright tests
         run: |
           npx playwright test
+        env:
+          CI: true
+
+      - name: Generate Allure Report
+        run: npx allure generate allure-results --clean -o allure-report
+
+      - name: Upload Allure Report as Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: allure-report
+          path: allure-report
