--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,32 +14,50 @@ jobs:
 
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18'
 
       - name: Install dependencies
-        run: |
-          npm install
+        run: npm install
 
       - name: Install Playwright Browsers
-        run: |
-          npx playwright install --with-deps
+        run: npx playwright install --with-deps
 
       - name: Run Playwright tests
-        run: |
-          npx playwright test
+        run: npx playwright test
         env:
           CI: true
 
+      - name: Ensure Allure Report Directory Exists
+        run: mkdir -p allure-report
+
+      - name: Check if Allure Results Exist
+        run: |
+          if [ -d "allure-results" ] && [ "$(ls -A allure-results)" ]; then
+            echo "Allure results found!"
+          else
+            echo "Allure results directory is empty! Tests may have failed."
+            exit 1
+          fi
+
       - name: Generate Allure Report
         run: npx allure generate allure-results --clean -o allure-report
+
+      - name: Debug Allure Report Directory
+        run: |
+          if [ -d "allure-report" ]; then
+            echo "Allure report directory exists!"
+          else
+            echo "Allure report directory NOT FOUND!"
+            exit 1
+          fi
 
       - name: Upload Allure Report as Artifact
         uses: actions/upload-artifact@v3
         with:
           name: allure-report
-          path: allure-report
+          path: allure-report/
