--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -45,7 +45,7 @@ jobs:
           fi
 
       - name: Generate Allure Report
-        run: npx allure generate allure-results --clean -o allure-report
+        run: npx allure-commandline generate allure-results --clean -o allure-report
 
       - name: Debug Allure Report Directory
         run: |
