--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@playwright/test": "^1.51.1",
     "@types/node": "^22.13.10",
+    "allure-commandline": "^2.33.0",
     "allure-playwright": "^3.2.1"
   },
   "type": "module"
