--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,6 +8,8 @@ on:
     branches:
       - main
 
+  workflow_dispatch:  
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -61,3 +63,14 @@ jobs:
         with:
           name: allure-report
           path: allure-report/
+
+      - name: Deploy Allure Report to GitHub Pages
+        if: github.ref == 'refs/heads/main'
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./allure-report
+          publish_branch: gh-pages
+          keep_files: false
+          force_orphan: true
+          commit_message: "Deploy Allure Report"
